OD-10220 return deleted jvm opt param