@@ -68,6 +68,7 @@ appBundler {
                   "-DJFileChooser.packageIsTraversable=true",
                   "-Dapple.awt.antialiasing=true",
                   "-Dapple.awt.showGrowBox=true",
+				  "-Djava.locale.providers=COMPAT,SPI",
                   "-Xmx${project.maxmemoryClient}"]
 }
 
